# learnign_rust

./: .gitignore  Cargo.toml  README.md
src/: checker.rs  downloader.rs  main.rs  persister.rs
