[package]
name = "learn-rust"
version = "0.1.0"
authors = ["lukasz.rozmej <lukasz.rozmej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8.4"
timer = "0.2.0"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["blocking", "gzip", "brotli", "deflate"] }
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }